Добавлен откат изменений по имени группы.
