# FilesCloudAPIClient/OpenAPIs/swagger1.json
@@ -355,6 +355,48 @@
         }
       }
     },
+    "/api/Files/RollBackSynchronizationByName": {
+      "post": {
+        "tags": [
+          "Files"
+        ],
+        "operationId": "RollBackSynchronizationByNameAsync",
+        "parameters": [
+          {
+            "name": "fileGroupName",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Files/GetFoldersList": {
       "get": {
         "tags": [
